# ai-guard-coding-agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE-3rdparty.csv  NOTICE  README.md  ai-guard.spec  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  matrix.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/chainguard/: self.github.release.main.sts.yaml
.github/workflows/: build.yml  release.yml  test.yml
docker/claude/: Dockerfile  claude-settings.json  entrypoint.sh
installer/: install.sh
scripts/: build-bundle.sh  build.sh  install.sh
src/aiguard/: __init__.py  __main__.py  cli.py  client.py  constants.py  keychain.py  paths.py  storage.py  utils.py
src/aiguard/claude/: handler.py  installer.py  proxy.py  translate.py  util.py
src/aiguard/hooks/: hooks.py
src/aiguard/installer/: __init__.py  agent.py  backup.py  config.py  installer.py  paths.py  prompt.py  ui.py
src/aiguard/installer/service/: launchd.py  manager.py  readiness.py  systemd_user.py  wrapper.py
src/aiguard/installer/templates/: __init__.py  ai-guard-service.sh.in  ai-guard.service.in  ai-guard.socket.in  com.datadoghq.ai-guard.plist.in
src/aiguard/proxy/: server.py  util.py
tests/: __init__.py  conftest.py  transcripts.py
tests/fixtures/: anthropic_messages_request.json  anthropic_messages_response.json  anthropic_sse_stream.txt  claude_dot_json.json
tests/integration/: test_binary_hooks.py  test_binary_proxy.py  test_hooks.py  test_proxy.py
tests/unit/: test_claude.py  test_cli.py  test_client.py  test_installer.py  test_keychain.py  test_server.py  test_storage.py  test_utils.py
tests/unit/claude/: test_handler.py  test_translate.py
