# Unless explicitly stated otherwise all files in this repository are licensed
# under the Apache 2.0 License.
#
# This product includes software developed at Datadog (https://www.datadoghq.com/).
# Copyright 2026-Present Datadog, Inc.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-guard"
version = "0.5.1"
description = "SDK and hook integrations bringing AI Guard's real-time threat detection to coding agents: Claude Code, Codex, and Cursor."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.4.1",
    "keyring>=24",
    "pwinput>=1.0.3",
    "rich>=13",
    "semantic-version>=2.10",
    "ddtrace>=4.10.2",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["ruff>=0.15.15"]
test = [
    "pytest>=9",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7",
]

[project.scripts]
ai-guard = "aiguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aiguard"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "binary: tests that exercise the built ai-guard executable (requires dist/ai-guard or AI_GUARD_BINARY).",
]
filterwarnings = [
    "ignore::DeprecationWarning:ddtrace.*",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
